@@ -1,6 +1,7 @@
 48
 ================
 
+12/04/24 Prevent screen reloading when processing any incoming forms
 12/04/24 adoptable_js: choosing a filter breaks iframes
 11/04/24 If there are no breeds, show a blank instead of species name
 11/04/24 Throw an error when a template does not exist instead of animalview
